--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="libs/matter.js"></script>
         <script src="graphics.js"></script>
         <script src="helper.js"></script>
+        <script src="sounds.js"></script>
         <script src="main.js"></script>
 
     </body>
