--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="libs/pixi3.js"></script>
         <script src="libs/pixi-cocoontext.js"></script>
         <script src="libs/pixi-extra-filters.js"></script>
+        <script src="libs/spriteUtilities.js"></script>
         <script src="libs/howler.min.js"></script>
         <script src="libs/Tween.js"></script>
         <script src="libs/lodash.js"></script>
